Finish editProfile and make ProfileScreen stateful (for updating)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets: 
-    - assets/flowers.jpg
-    - car.jpg
-    - spaceship.jpg
+    - assets/flower.jpg
+    - assets/car.jpg
+    - assets/spaceship.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
